# ExampleWithTinyproto

./: CMakeLists.txt  LICENSE  README.md  build.py  generate.py  initial_cache.cmake
lib/tinyproto/: .cproject  .project
lib/tinyproto/bld/: libtinyprotocol.a.old  tiny_loopback  tiny_loopback (copy)
lib/tinyproto/examples/linux/hdlc_demo/: hdlc_demo.cpp
lib/tinyproto/src/: TinyProtocolFd.h
lib/tinyproto/src/proto/fd/: tiny_fd.c
lib/tinyproto/src/proto/hal/: tiny_debug.h
src/: tiny_loopback.cpp
